2007-07-17  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Create comment node in result document when a 404 error occurs.
	 
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	Render pages that have valid page targets but are not known by ContextXMLServlet. 
	
	* src/de/schlund/pfixcore/editor2/frontend/handlers/CommonUploadIncludePartHandler.java:
	Fixed bug in editor causing empty include parts not to be saved correctly.
	
	* projects/core/editor2/xsl/runtime.xsl: 
	Removed xmlns declarations from editor output.
	
	* projects/core/script/wfxEditor.js: 
	Improved copy & past in javascript editor form.

2007-07-16  Martin Leidig  <mleidig@schlund.de>

	Added support for automatic IWrapper generation from annotated beans.
	Everything which can be configured in XML within the iwrp-Files now
	can be done within Java bean classes by using according annotations.

	The Java source files now are preprocessed by the JDK's apt tool.
	Using the IWrapperAnnotationProcessor the Java IWrapper sources are
	generated from the beans by apt. 
	
	Added:

	* src/de/schlund/pfixcore/generator/annotation/Param.java
	* src/de/schlund/pfixcore/generator/annotation/PreCheck.java
	* src/de/schlund/pfixcore/generator/annotation/Transient.java
	* src/de/schlund/pfixcore/generator/annotation/Property.java
	* src/de/schlund/pfixcore/generator/annotation/IWrapper.java
	* src/de/schlund/pfixcore/generator/annotation/PostCheck.java
	* src/de/schlund/pfixcore/generator/annotation/Caster.java
	* src/de/schlund/pfixcore/generator/iwrpgen
	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperGeneratorTask.java
	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperAnnotationProcessor.java
	* src/de/schlund/pfixcore/generator/iwrpgen/BeanDescriptor.java
	* src/de/schlund/pfixcore/generator/iwrpgen/MirrorApiUtils.java
	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperAnnotationProcessorFactory.java